--- a/Clipper/Info.plist
+++ b/Clipper/Info.plist
@@ -43,5 +43,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>uber</string>
+    </array>
 </dict>
 </plist>
