--- a/Clipper/Root/Config.plist
+++ b/Clipper/Root/Config.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>insertLocation</key>
 	<string>insert into location (location, latitude, longitude, reference) values (&apos;[LOCATION]&apos;, [LATITUDE], [LONGITUDE], &apos;[REFERENCE]&apos;)</string>
+	<key>deleteLocation</key>
+	<string>delete from location where location=&apos;[LOCATION]&apos; and reference=&apos;[REFERENCE]&apos;</string>
 	<key>getLocations</key>
 	<string>select id, location, reference, latitude, longitude from location</string>
 </dict>
